--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,11 +10,11 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html{
+html {
     font-size: 62.5%;
 }
 
-body{
+body {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
@@ -22,7 +22,7 @@ body{
     color: white;
 }
 
-header{
+header {
     margin-top: 20px;
     position: fixed;
     top: 0;
@@ -33,23 +33,27 @@ header{
     filter: drop-shadow(10px);
     display: flex;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
     z-index: 100;
 }
 
-.logo{
+.logo {
     font-size: 3rem;
     color: #b74b4b;
     font-weight: 800;
     cursor: pointer;
 }
 
-.logo:hover{
+p {
+    font-size: 1.4 rem;
+}
+
+.logo:hover {
     transform: scale(1.15);
     transition: 0.5s ease;
 }
 
-nav a{
+nav a {
     font-size: 1.8rem;
     color: white;
     margin-left: 4rem;
@@ -58,16 +62,94 @@ nav a{
 }
 
 
-nav a:hover
-{
-    color:#b74b4b;
+nav a:hover {
+    color: #b74b4b;
     border-bottom: 3px solid #b74b4b;
-    transform: scale(1.3);
+    transform: scale(1.05);
 }
 
-@media(max-width:995px){
-    nav{
-        position:absolute;
+#hamburger-nav {
+    display: none;
+}
+
+.hamburger-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.hamburger-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+    list-style: none;
+}
+
+.menu-links.open {
+    max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+.hamburger-icon span:first-child {
+    opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+
+@media(max-width:995px) {
+    nav {
+        position: absolute;
         top: 100%;
         right: 0;
         width: 40%;
@@ -80,78 +162,79 @@ nav a:hover
 
     }
 
-    nav.active{
-        display:block;
+    nav.active {
+        display: block;
     }
 
-    nav a{
-        display:block;
+    nav a {
+        display: block;
         font-size: 2rem;
         margin: 3rem 0;
     }
 
     nav a:hover,
-    nav a.active{
+    nav a.active {
         padding: 1rem;
         border-radius: 0.5rem;
         border-bottom: 0.5rem;
     }
 }
 
-section{
+section {
     min-height: 100vh;
     padding: 5rem 9% 5rem;
 }
 
-.home{
-    display:flex;
+.home {
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 8rem;
     background-color: black;
 }
-.home .home-content h1{
+
+.home .home-content h1 {
     font-size: 6rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
-span{
+span {
     color: #b74b4b;
 }
 
-.home-content h3{
+.home-content h3 {
     font-size: 4rem;
     margin-bottom: 1rem;
     font-weight: 700;
 }
 
-.home-img{
+.home-img {
     border-radius: 50%;
 }
 
-.home-img img{
+.home-img img {
     background-color: rgb(255, 255, 255);
-    position:relative;
+    position: relative;
     width: 32vw;
     border-radius: 50%;
     box-shadow: 0 0 25px solid #b74b4b;
     cursor: pointer;
-    
+
 }
 
-.home-img img:hover{
+.home-img img:hover {
     border-radius: 20%;
     transition: 0.5s linear;
     font-size: 1.8rem;
     font-weight: 500;
 }
 
-.social-icons a{
+.social-icons a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width:4rem;
+    width: 4rem;
     height: 4rem;
     background-color: transparent;
     border: 0.2rem solid #b74b4b;
@@ -161,7 +244,7 @@ span{
     color: #b74b4b;
 }
 
-.social-icons a:hover{
+.social-icons a:hover {
     color: black;
     transition: 0.5s ease-in-out;
     transform: scale(1.3) translateY(-5px);
@@ -169,7 +252,7 @@ span{
     box-shadow: 0 0 25px #b74b4b;
 }
 
-.btn{
+.btn {
     display: inline-block;
     padding: 1rem 2.8rem;
     background-color: black;
@@ -183,84 +266,45 @@ span{
     cursor: pointer;
 }
 
-.btn:hover{
+.btn:hover {
     transform: scale3d(1.03);
     background-color: #b74b4b;
     color: black;
     box-shadow: 0 0 25px #b74b4b;
 }
 
-.typing-text{
+.typing-text {
     font-size: 34px;
     font-weight: 600;
     min-width: 280px;
 }
 
-.typing-text span{
+.typing-text span {
     position: relative;
-}
-
-.typing-text span::before{
-    content: "Software Developer";
     color: #b74b4b;
-    animation: words 20s infinite;
 }
 
-.typing-text span::after{
-    content: "";
-    background-color: black;
-    position: absolute;
-    width :cal(100% + 8px);
-    height: 100%;
-    border-left: 3px solid black;
-    right: -8;
-    animation: cursor 0.6s infinite;
-}
-
-@keyframes cursor {
-    to{
-        border-left: 3px solid #b74b4b;
-    }
-    
-}
-
-@keyframes words{
-    0%, 20%{
-        content: "Web Developer";
-    }
-    21%, 40%{
-        content: "Developer";
-    }
-    41%, 60%{
-        content: "Web Designer";
-    }
-    61%, 80%{
-        content: "Youtuber";
-    }
-    81%, 100%{
-        content: "Script Writer";
-    }
-}
-@media (max-width: 1000px){
-    .home{
+@media (max-width: 1000px) {
+    .home {
         gap: 4rem;
     }
 }
-@media(max-width:995px){
-    .home{
+
+@media(max-width:995px) {
+    .home {
         flex-direction: column;
         margin: 5rem 4rem;
     }
 
-    .home .home-content h3{
+    .home .home-content h3 {
         font-size: 2.5rem;
     }
 
-    .home-content h1{
+    .home-content h1 {
         font-size: 5rem;
     }
 
-    .home-img img{
+    .home-img img {
         width: 70vw;
         margin-top: 4rem;
     }
