--- a/style.css
+++ b/style.css
@@ -39,9 +39,10 @@ header {
 
 .logo {
     font-size: 3rem;
-    color: #b74b4b;
+    color: #3C3D37;
     font-weight: 800;
     cursor: pointer;
+    
 }
 
 p {
@@ -51,11 +52,12 @@ p {
 .logo:hover {
     transform: scale(1.15);
     transition: 0.5s ease;
+    
 }
 
 nav a {
     font-size: 1.8rem;
-    color: white;
+    color: #ECDFCC;
     margin-left: 4rem;
     font-weight: 500;
     border-bottom: 3px solid transparent;
@@ -63,108 +65,77 @@ nav a {
 
 
 nav a:hover {
-    color: #b74b4b;
-    border-bottom: 3px solid #b74b4b;
+    color: #3C3D37;
+    border-bottom: 3px solid #3C3D37;
     transform: scale(1.05);
 }
 
-#hamburger-nav {
+/* Hamburger Menu */
+.hamburger {
     display: none;
-}
-
-.hamburger-menu {
-    position: relative;
-    display: inline-block;
-}
-
-.hamburger-icon {
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 24px;
-    width: 30px;
+    width: 3rem;
+    height: 2.5rem;
     cursor: pointer;
+    z-index: 200; /* Ensure it appears above the nav */
 }
 
-.hamburger-icon span {
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    transition: all 0.3 ease-in-out;
-}
-
-.menu-links {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: white;
-    width: fit-content;
-    max-height: 0;
-    overflow: hidden;
-    transition: all 0.3 ease-in-out;
-}
-
-.menu-links a {
+.hamburger span {
     display: block;
-    padding: 10px;
-    text-align: center;
-    font-size: 1.5rem;
-    color: black;
-    text-decoration: none;
-    transition: all 0.3 ease-in-out;
+    height: 0.4rem;
+    width: 100%;
+    background-color: white;
+    border-radius: 1rem;
+    transition: 0.3s ease-in-out;
 }
 
-.menu-links li {
-    list-style: none;
+/* When menu is active */
+.hamburger.active span:nth-child(1) {
+    transform: rotate(40deg) translateY(1.3rem);
 }
 
-.menu-links.open {
-    max-height: 300px;
-}
-
-.hamburger-icon.open span:first-child {
-    transform: rotate(45deg) translate(10px, 5px);
-}
-
-.hamburger-icon.open span:nth-child(2) {
+.hamburger.active span:nth-child(2) {
     opacity: 0;
 }
 
-.hamburger-icon.open span:last-child {
-    transform: rotate(-45deg) translate(10px, -5px);
+.hamburger.active span:nth-child(3) {
+    transform: rotate(-40deg) translateY(-2rem);
 }
 
-.hamburger-icon span:first-child {
-    transform: none;
-}
-
-.hamburger-icon span:first-child {
-    opacity: 1;
-}
-
-.hamburger-icon span:first-child {
-    transform: none;
-}
-
+/* Show hamburger menu on smaller screens */
 
 @media(max-width:995px) {
-    nav {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 40%;
-        border-left: 3px solid #b74b4b;
-        border-bottom: 3px solid #b74b4b;
-        border-bottom-left-radius: 2rem;
-        padding: 1rem solid;
-        background-color: #161616;
-        border-top: 0.1rem solid rgba(0, 0, 0, 1);
-
+    .hamburger {
+        display: flex;
     }
+
+    nav {
+        position: fixed;
+        top: 6rem;
+        right: -100%;
+        width: 70%;
+        height: 100%;
+        background-color: #161616;
+        flex-direction: column;
+        padding: 2rem;
+        transition: right 0.3s ease-in-out;
+        z-index: 100;
+    }
+    
+
 
     nav.active {
-        display: block;
+        right: 0;
     }
+
+    nav a {
+        margin: 1.5rem 0;
+        font-size: 2rem;
+        color: white;
+        text-align: center;
+    }
+    
 
     nav a {
         display: block;
@@ -177,6 +148,7 @@ nav a:hover {
         padding: 1rem;
         border-radius: 0.5rem;
         border-bottom: 0.5rem;
+        box-shadow: 0 0 25px #3C3D37;
     }
 }
 
@@ -200,10 +172,16 @@ section {
 }
 
 span {
-    color: #b74b4b;
+    color: #3C3D37;
 }
 
 .home-content h3 {
+    font-size: 4rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+p{
     font-size: 4rem;
     margin-bottom: 1rem;
     font-weight: 700;
@@ -214,11 +192,11 @@ span {
 }
 
 .home-img img {
-    background-color: rgb(255, 255, 255);
+    background-color: #3C3D37;
     position: relative;
     width: 32vw;
     border-radius: 50%;
-    box-shadow: 0 0 25px solid #b74b4b;
+    box-shadow: 0 0 25px solid #3C3D37;
     cursor: pointer;
 
 }
@@ -237,19 +215,19 @@ span {
     width: 4rem;
     height: 4rem;
     background-color: transparent;
-    border: 0.2rem solid #b74b4b;
+    border: 0.2rem solid #3C3D37;
     font-size: 2rem;
     border-radius: 50%;
     margin: 3rem 1.5rem 3rem 0;
-    color: #b74b4b;
+    color: #3C3D37;
 }
 
 .social-icons a:hover {
     color: black;
-    transition: 0.5s ease-in-out;
+    transition: 0.3s ease-in-out;
     transform: scale(1.3) translateY(-5px);
-    background-color: #b74b4b;
-    box-shadow: 0 0 25px #b74b4b;
+    background-color: #3C3D37;
+    box-shadow: 0 0 25px #3C3D37;
 }
 
 .btn {
@@ -258,19 +236,19 @@ span {
     background-color: black;
     border-radius: 4rem;
     font-size: 1.6rem;
-    color: #b74b4b;
+    color: #3C3D37;
     letter-spacing: 0.3rem;
     font-weight: 600;
-    border: 2px solid #b74b4b;
+    border: 2px solid #3C3D37;
     transition: 0.3s ease;
     cursor: pointer;
 }
 
 .btn:hover {
     transform: scale3d(1.03);
-    background-color: #b74b4b;
+    background-color: #3C3D37;
     color: black;
-    box-shadow: 0 0 25px #b74b4b;
+    box-shadow: 0 0 25px #3C3D37;
 }
 
 .typing-text {
@@ -281,7 +259,7 @@ span {
 
 .typing-text span {
     position: relative;
-    color: #b74b4b;
+    color: #3C3D37;
 }
 
 @media (max-width: 1000px) {
