--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header {
 
 .logo {
     font-size: 3rem;
-    color: #3C3D37;
+    color: #e04e35d1;
     font-weight: 800;
     cursor: pointer;
     
@@ -65,8 +65,8 @@ nav a {
 
 
 nav a:hover {
-    color: #3C3D37;
-    border-bottom: 3px solid #3C3D37;
+    color: #e04e35d1;
+    border-bottom: 3px solid #e04e35d1;
     transform: scale(1.05);
 }
 
@@ -148,7 +148,7 @@ nav a:hover {
         padding: 1rem;
         border-radius: 0.5rem;
         border-bottom: 0.5rem;
-        box-shadow: 0 0 25px #3C3D37;
+        box-shadow: 0 0 25px #e04e35d1;
     }
 }
 
@@ -172,7 +172,7 @@ section {
 }
 
 span {
-    color: #3C3D37;
+    color: #e04e35d1;
 }
 
 .home-content h3 {
@@ -192,20 +192,20 @@ p{
 }
 
 .home-img img {
-    background-color: #3C3D37;
+    background-color: #e04e35d1;
     position: relative;
     width: 32vw;
     border-radius: 50%;
-    box-shadow: 0 0 25px solid #3C3D37;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.8), -10px -10px 30px rgba(255, 255, 255, 0.1);
     cursor: pointer;
-
+    transition: transform 0.5s linear, box-shadow 0.5s linear;
 }
 
 .home-img img:hover {
     border-radius: 20%;
-    transition: 0.5s linear;
-    font-size: 1.8rem;
-    font-weight: 500;
+    transform: scale(1.1);
+    box-shadow: 15px 15px 50px rgba(0, 0, 0, 0.9), 15px 15px 50px rgba(255, 255, 255, 0.2);
+    transition: 0.5s ease-in-out;
 }
 
 .social-icons a {
@@ -215,19 +215,19 @@ p{
     width: 4rem;
     height: 4rem;
     background-color: transparent;
-    border: 0.2rem solid #3C3D37;
+    border: 0.2rem solid #e04e35d1;
     font-size: 2rem;
     border-radius: 50%;
     margin: 3rem 1.5rem 3rem 0;
-    color: #3C3D37;
+    color: #e04e35d1;
 }
 
 .social-icons a:hover {
     color: black;
     transition: 0.3s ease-in-out;
     transform: scale(1.3) translateY(-5px);
-    background-color: #3C3D37;
-    box-shadow: 0 0 25px #3C3D37;
+    background-color: #e04e35d1;
+    box-shadow: 0 0 25px #e04e35d1;
 }
 
 .btn {
@@ -236,19 +236,19 @@ p{
     background-color: black;
     border-radius: 4rem;
     font-size: 1.6rem;
-    color: #3C3D37;
+    color: #e04e35d1;
     letter-spacing: 0.3rem;
     font-weight: 600;
-    border: 2px solid #3C3D37;
+    border: 2px solid #e04e35d1;
     transition: 0.3s ease;
     cursor: pointer;
 }
 
 .btn:hover {
     transform: scale3d(1.03);
-    background-color: #3C3D37;
+    background-color: #e04e35d1;
     color: black;
-    box-shadow: 0 0 25px #3C3D37;
+    box-shadow: 0 0 25px #e04e35d1;
 }
 
 .typing-text {
@@ -259,7 +259,7 @@ p{
 
 .typing-text span {
     position: relative;
-    color: #3C3D37;
+    color: #e04e35d1;
 }
 
 @media (max-width: 1000px) {
